--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <canvas id="canvas_planet" width="1000" height="1000" style="border: 1px solid black"></canvas>
 <!--<canvas id="canvas_background" width="400" height="400" style="border: 1px solid black"></canvas>-->
 <!--<canvas id="canvas_arrow" width="400" height="400" style="border: 1px solid black"></canvas>-->
-
+<canvas id="canvas_explosions" width="1000" height="1000" style="border: 1px solid black"></canvas>
 <canvas id="canvas_enemies" width="1000" height="1000" style="border: 1px solid black"></canvas>
-
 
 <section id="controls-wrapper">
     <!--<label>Mass of Added Planet</label>-->
@@ -30,6 +29,6 @@
     <!--<button id="reset-button">Reset</button>-->
 </section>
 
-<script src="js/main2.js"></script>
+<script src="js/game.js"></script>
 </body>
 </html>
