--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <!--<button id="reset-button">Reset</button>-->
 </section>
 
-<script src="js/game.js"></script>
+<script src="js/man.js"></script>
 </body>
 </html>
