--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <canvas id="canvas_explosions" width="1000" height="1000" style="border: 1px solid black"></canvas>
 <canvas id="canvas_enemies" width="1000" height="1000" style="border: 1px solid black"></canvas>
 <canvas id="canvas_dicklets" width="1000" height="1000" style="border: 1px solid black"></canvas>
+<canvas id="canvas_circles" width="1000" height="1000" style="border: 1px solid black"></canvas>
 
 <button type="button" id="startBtn" onclick="start()">START</button>
 <button type="button" id="optionsBtn" onclick="showOptions()">OPTIONS</button>
