#00000|WellDone|added background

--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
 
 <!--<canvas id="ui_enemies" width="400" height="400" style="border: 1px solid black"></canvas>-->
 <!--<canvas id="canvas_player" width="400" height="400" style="border: 1px solid black"></canvas>-->
-<canvas id="canvas_planet" width="1000" height="1000" style="border: 1px solid black"></canvas>
-<!--<canvas id="canvas_background" width="400" height="400" style="border: 1px solid black"></canvas>-->
+<canvas id="canvas_background" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_stars" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_planet" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <!--<canvas id="canvas_arrow" width="400" height="400" style="border: 1px solid black"></canvas>-->
-<canvas id="canvas_explosions" width="1000" height="1000" style="border: 1px solid black"></canvas>
-<canvas id="canvas_enemies" width="1000" height="1000" style="border: 1px solid black"></canvas>
-<canvas id="canvas_dicklets" width="1000" height="1000" style="border: 1px solid black"></canvas>
-<canvas id="canvas_circles" width="1000" height="1000" style="border: 1px solid black"></canvas>
-<canvas id="canvas_rocket" width="1000" height="1000" style="border: 1px solid black"></canvas>
+<canvas id="canvas_explosions" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_enemies" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_dicklets" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_circles" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_rocket" width="2400" height="1200" style="border: 1px solid black"></canvas>
 
-<button type="button" id="startBtn" onclick="start()">START</button>
+<button type="button" id="startBtn" onclick="start()">START</button>s
 <button type="button" id="optionsBtn" onclick="showOptions()">OPTIONS</button>
 <button type="button" id="optionsBackBtn" onclick="backOptions()">BACK</button>
 
