--- a/index.html
+++ b/index.html
@@ -127,8 +127,13 @@
     <!--<button id="reset-button">Reset</button>-->
 </section>
 
+<script src="js/canvasContext.js"></script>
+<script src="js/star.js"></script>
+<script src="js/explosion.js"></script>
 <script src="js/planet.js"></script>
 <script src="js/game.js"></script>
+<script src="js/listeners.js"></script>
+<script src="js/buttons.js"></script>
 
 </body>
 </html>
