--- a/index.html
+++ b/index.html
@@ -127,9 +127,11 @@
 </section>
 
 <script src="js/canvasContext.js"></script>
+<script src="js/avatar.js"></script>
 <script src="js/star.js"></script>
 <script src="js/explosion.js"></script>
 <script src="js/planet.js"></script>
+<script src="js/rocket.js"></script>
 <script src="js/game.js"></script>
 <script src="js/listeners.js"></script>
 <script src="js/buttons.js"></script>
