#00000|WellDone|added bones, start building skill bar

--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
 <canvas id="canvas_rocket" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <canvas id="canvas_player" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <canvas id="canvas_avatar" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_bone" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_skills" width="2400" height="1200" style="border: 1px solid black"></canvas>
 
 <canvas id="canvas_pause" width="2400" height="1200" style="border: 1px solid black"></canvas>
 
@@ -154,6 +156,7 @@
 <script src="js/avatar.js"></script>
 <script src="js/star.js"></script>
 <script src="js/explosion.js"></script>
+<script src="js/bone.js"></script>
 <script src="js/planet.js"></script>
 <script src="js/rocket.js"></script>
 <script src="js/player.js"></script>
