#00000|WellDone|added basic cooldown timer, refactor

--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
 <canvas id="canvas_player" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <canvas id="canvas_avatar" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <canvas id="canvas_bone" width="2400" height="1200" style="border: 1px solid black"></canvas>
+
 <canvas id="canvas_skills" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_skill_cd1" width="2400" height="1200" style="border: 1px solid black"></canvas>
+
 <canvas id="canvas_shield" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <canvas id="canvas_pause" width="2400" height="1200" style="border: 1px solid black"></canvas>
 
@@ -153,14 +156,19 @@
 </section>
 
 <script src="js/gui/canvasContext.js"></script>
-<script src="js/gui/avatar.js"></script>
+<script src="js/gui/skillbar/skillCooldown.js"></script>
+<script src="js/gui/skillbar/skillbar.js"></script>
+<script src="js/gui/avatar/avatar.js"></script>
 <script src="js/world/star.js"></script>
 <script src="js/effects/explosion.js"></script>
+<script src="js/skills/bodies.js"></script>
 <script src="js/skills/bone.js"></script>
 <script src="js/world/planet.js"></script>
 <script src="js/enemies/rocket.js"></script>
+<script src="js/enemies/diglet.js"></script>
 <script src="js/skills/shield.js"></script>
 <script src="js/player/player.js"></script>
+
 <script src="js/game.js"></script>
 <script src="js/gui/listeners.js"></script>
 <script src="js/gui/buttons.js"></script>
