#00000|WellDone|added cooldown timer to skilbar, improved shield

--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
 
 <canvas id="canvas_skills" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <canvas id="canvas_skill_cd1" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_skill_cd2" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_skill_cd3" width="2400" height="1200" style="border: 1px solid black"></canvas>
 
 <canvas id="canvas_shield" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <canvas id="canvas_pause" width="2400" height="1200" style="border: 1px solid black"></canvas>
