#00000|WellDone|start trying building own smoke particles

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
 <script src="js/gui/avatar/avatar.js"></script>
 <script src="js/world/star.js"></script>
 <script src="js/effects/explosion.js"></script>
+<script src="js/effects/smokeParticle.js"></script>
+<script src="js/effects/smoke.js"></script>
 <script src="js/skills/bodies.js"></script>
 <script src="js/skills/bone.js"></script>
 <script src="js/world/planet.js"></script>
