#00000|WellDone|enemy collision

--- a/index.html
+++ b/index.html
@@ -120,7 +120,10 @@
 
 <canvas id="canvas_background" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <canvas id="canvas_stars" width="2400" height="1200" style="border: 1px solid black"></canvas>
+
 <canvas id="canvas_planet" width="2400" height="1200" style="border: 1px solid black"></canvas>
+<canvas id="canvas_meteor" width="2400" height="1200" style="border: 1px solid black"></canvas>
+
 <canvas id="canvas_explosions" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <canvas id="canvas_enemies" width="2400" height="1200" style="border: 1px solid black"></canvas>
 <canvas id="canvas_dicklets" width="2400" height="1200" style="border: 1px solid black"></canvas>
@@ -164,6 +167,7 @@
 <script src="js/world/star.js"></script>
 <script src="js/effects/explosion.js"></script>
 <script src="js/effects/smokeParticle.js"></script>
+<script src="js/skills/meteor.js"></script>
 <script src="js/effects/smoke.js"></script>
 <script src="js/skills/bodies.js"></script>
 <script src="js/skills/bone.js"></script>
